dataset/local/tf_ecs_container_insights/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_ecs_cluster
        values:
          setting:
            - name: "containerInsights"
              value: "enabled"
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_ecs_cluster
        values:
          setting:
            - name: "containerInsights"
              value: "disabled"
