dataset/local/tf_ecs_container_insights/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-ecs-container-insights-enabled
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: validate-ecs-container-insights-enabled
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: validate-ecs-container-insights-enabled
    kind: Plan
    resources:
      - bad-plan
    result: fail
